--- a/HamsterHubProject/src/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -1,10 +1,23 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+{% include 'UserBundle:Base:head.html.twig' %}
+<body>
+
+{{ form_start(form) }}
+
+{{ form_widget(form) }}
+<div>
+    <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+</div>
 {{ form_end(form) }}
 
 <a href="/profile/show/{{ app.user.username|lower }}">Return to Profile</a>
+
+{% include 'UserBundle:Base:footer.html.twig' %}
+
+</body>
+</html>
+
+
