--- a/HamsterHubProject/src/VideoBundle/Resources/views/Video/show_video.html.twig
+++ b/HamsterHubProject/src/VideoBundle/Resources/views/Video/show_video.html.twig
@@ -1,24 +1,26 @@
-<head>
-    {% block javascripts %}
-        <script type="text/javascript" src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
-    {% endblock %}
-</head>
+<!DOCTYPE html>
+<html lang="en">
+{% include 'UserBundle:Base:head.html.twig' %}
+<body>
 
-{% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': 'foo'} %}
+    <h1>{{ videoPage.title }}</h1>
 
+    <iframe width="560" height="315" src="{{ videoPage.url }}" frameborder="0" allowfullscreen></iframe>
 
-<h1>{{ videoPage.title }}</h1>
+    <div>
+        <p>{{ videoPage.description }}</p>
+    </div>
 
-<iframe width="560" height="315" src="{{ videoPage.url }}" frameborder="0" allowfullscreen></iframe>
+    <div>
+        <p>Posted By <a href="/profile/show/{{ videoPage.authorName|lower }}">{{ videoPage.authorName }}</p></a>
+    </div>
 
-<div>
-    <p>{{ videoPage.description }}</p>
-</div>
+    {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': videoPage.id } %}
 
-<div>
-    <p>Posted By <a href="/profile/show/{{ videoPage.authorName|lower }}">{{ videoPage.authorName }}</p></a>
-</div>
+    {% include 'UserBundle:Base:footer.html.twig' %}
 
+</body>
+</html>
 
 
 
