--- a/HamsterHubProject/src/UserBundle/Resources/views/Base/footer.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Base/footer.html.twig
@@ -1,3 +1,4 @@
-<footer>
-    Created By Antoine Mailly & Alexandre Picard.
+<footer class="stickyFooter">
+    <p>Copyright 2016 &#169; All Rights Reserved <br>
+    Created By Antoine Mailly & Alexandre Picard</p>
 </footer>
