--- a/HamsterHubProject/src/UserBundle/Resources/views/Base/homepage.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Base/homepage.html.twig
@@ -2,11 +2,11 @@
 
 <body>
 {% include 'UserBundle:Base:header.html.twig' %}
-<div class="container">
+<main role="main" class="container">
     {% block container %}
 
     {% endblock %}
-</div>
+</main>
 {% include 'UserBundle:Base:footer.html.twig' %}
 </body>
 </html>
