--- a/HamsterHubProject/src/UserBundle/Resources/views/Homepage/homepage.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Homepage/homepage.html.twig
@@ -2,27 +2,23 @@
 {% extends 'UserBundle:Base:homepage.html.twig' %}
 
 {% block container %}
-
-
-    <div class="postVideo">
         {{ errors }}
             <div class="videoList">
                 <ul>
                     {% for item in videos %}
                     <li>
-                        <h4>{{ item.name }}</h4>
-                        <a href="/video/show/{{ item.youtubeId }}">
-                            <img src="{{ item.preview }}">
-                        </a>
-                        <br><br>
-                        Posted By <a href="/profile/show/{{ item.username|lower }}">{{ item.username }}</a>
+                        <div listContent>
+                            <h4>{{ item.name }}</h4>
+                            <a href="/video/show/{{ item.youtubeId }}">
+                                <img src="{{ item.preview }}">
+                            </a>
+                            <br><br>
+                            Posted By <a href="/profile/show/{{ item.username|lower }}">{{ item.username }}</a>
+                        </div>
                     </li>
                     {% endfor %}
                 </ul>
             </div><br>
-
-    </div>
-
 {% endblock %}
 
 
