--- a/HamsterHubProject/web/assets/css/header.scss
+++ b/HamsterHubProject/web/assets/css/header.scss
@@ -1,4 +1,26 @@
+.title {
+  width: 100%;
+  height: 37px;
+  text-align: center;
+  line-height: 38px;
+  font-family: Roboto, Serif;
+  background: #2F5AA1;
+  font-size: 20px;
+}
+
+.title a {
+  color: #FFF;
+}
+
+//MAIN MENU
 #menu {
+  position: fixed;
+  width: 100%;
+
+  .textMenu {
+    display: none;
+  }
+
   .menuImage {
     witdh: 2rem;
     height: 2rem;
@@ -9,13 +31,49 @@
 
   li {
     background: #2F5AA1;
-    width: 33.3%;
+    width: 33%;
     float: left;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+  }
+
+  li:hover {
+    background: #e6e6e6;
+  }
+
+  li:nth-of-type(2){
+    width: 34%;
   }
 
   li:nth-of-type(2) img{
     position: relative;
     top: 3px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  #menu {
+    .textMenu {
+      witdh: 2rem;
+      height: 2rem;
+      text-align: center;
+      display: block;
+      line-height: 32px;
+      font-weight: bold;
+      font-size: 15px;
+      font-family: Roboto, Serif;
+    }
+
+    .menuImage {
+      display: none;
+    }
+
+    li a:hover {
+      color: #e76049;
+
+    }
   }
 }
 
