--- a/HamsterHubProject/web/assets/css/style.scss
+++ b/HamsterHubProject/web/assets/css/style.scss
@@ -1,3 +1,4 @@
-@import 'reset.css';
+@import 'reset.scss';
 @import 'header.scss';
-@import "homepage.scss";
+@import 'homepage.scss';
+@import 'footer';
