--- a/HamsterHubProject/web/assets/css/homepage.scss
+++ b/HamsterHubProject/web/assets/css/homepage.scss
@@ -1,4 +1,6 @@
 .videoList {
+  display: table;
+  margin: 0 auto;
 
   h4 {
     font-size: 18px;
@@ -7,13 +9,9 @@
 
   li {
     float: left;
-    display: table;
-    width: 100%;
+    margin-top: 100px;
+    display: inline;
     text-align: center;
-  }
-
-  .listContent {
-    display: table-cell;
   }
 
   img {
