--- a/HamsterHubProject/web/assets/css/footer.scss
+++ b/HamsterHubProject/web/assets/css/footer.scss
@@ -19,7 +19,7 @@ html, body {
 }
 .stickyFooter {
   font-size: 13px;
-  background: #2F5AA1;
+  background: #00416A;
   text-align: center;
   font-family: Roboto, Serif;
   display: table;
