--- a/HamsterHubProject/web/assets/css/style.scss
+++ b/HamsterHubProject/web/assets/css/style.scss
@@ -1,4 +1,10 @@
 @import 'reset.scss';
 @import 'header.scss';
 @import 'homepage.scss';
-@import 'footer';
+@import 'footer.scss';
+@import 'profile.scss';
+@import 'font.scss';
+@import 'color.scss';
+@import 'modal.scss';
+@import 'video.scss';
+@import 'editProfil.scss';
