--- a/HamsterHubProject/src/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -1,52 +1,67 @@
 {% trans_default_domain 'FOSUserBundle' %}
 {% include 'UserBundle:Base:head.html.twig' %}
 <body>
-{% include 'UserBundle:Base:header.html.twig' %}
-<div class="fos_user_user_show">
-    <h2>Your Informations:</h2>
-    <img src="{{ asset(imageUrl) }}" alt="{{ profile.username }}" >
-    <p>{{ 'profile.show.username'|trans }}: {{ profile.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ profile.email }}</p>
-    <p>{{ 'Lastname' }}: {{ profile.lastname }}</p>
-    <p>{{ 'Firstname' }}: {{ profile.firstname }}</p>
+<main role="main">
+    {% include 'UserBundle:Base:header.html.twig' %}
+
+    <!--  PopUp background -->
 
 
+    <div class="fos_user_user_show">
+        <h2>Your Informations:</h2>
+        <img src="{{ asset(imageUrl) }}" alt="{{ profile.username }}">
+        <p>{{ 'profile.show.username'|trans }}: {{ profile.username }}</p>
+        <p>{{ 'profile.show.email'|trans }}: {{ profile.email }}</p>
+        <p>{{ 'Lastname' }}: {{ profile.lastname }}</p>
+        <p>{{ 'Firstname' }}: {{ profile.firstname }}</p>
+    </div>
 
     {% if(userLogged == profile.id)  %}
-        <button> <a href="{{ path('fos_user_profile_edit') }}">Edit Profile</a></button>
+        <span class="editBtn"><a href="{{ path('fos_user_profile_edit') }}">Edit Profile</a></span>
     {% endif %}
 
-</div>
-
-
-<div class="postVideo">
-    <h2>My Videos:</h2>
-    <span class="noVideo">{{ errors }}</span>
-    {% for item in videos %}
-        <h4>{{ item.name }}</h4>
-        <a href="/video/show/{{ item.youtubeId }}"><img src="{{ item.preview }}"></a>
-        {% if(userLogged == profile.id) %}
-            <form id="delete" method="post">
-                <input type="hidden" name="id" value="{{ item.id }}">
-                <input type="submit" name="delete" value="Supprimer">
-            </form>
+    <div class="postVideo">
+        {% if(userLogged == profile.id)  %}
+        <h2>My Videos:</h2>
+        <span class="error">{{ errors }}</span>
+         {% else %}
+            <h2>Video of {{ profile.username }}</h2>
         {% endif %}
-    {% endfor %}
-</div>
-
-
-
-{% if ((is_granted("IS_AUTHENTICATED_REMEMBERED")) or (is_granted("IS_AUTHENTICATED_FULLY"))) %}
-
-    <button class="uploadAVideo"></button>
-    <div class="modalPopUp">
-        <form id="upload" method="post" >
-            <h1>Mettre un post en ligne : </h1><br>
-            <input type="text" name="video[name]" placeholder="Titre" required><br><br>
-            <input type="text" name="video[link]" placeholder="Url" required><br><br>
-            <input type="text" name="video[description]" placeholder="Description" required><br><br>
-            <button type="submit">ok</button>
-            <input type="hidden" id="video__token" name="video[_token]" value="{{ csrf_token('video') }}" >
-        </form>
+        <button  class="uploadBtn" id="uploadAVideo">Upload video</button>
+        {% for item in videos %}
+            <h4>{{ item.name }}</h4>
+            <a href="/video/show/{{ item.youtubeId }}"><img src="{{ item.preview }}" alt="{{ item.name }}"></a>
+            {% if(userLogged == profile.id) %}
+                <form id="delete" method="post">
+                    <input type="hidden" name="id" value="{{ item.id }}">
+                    <input type="submit" name="delete" value="Supprimer">
+                </form>
+            {% endif %}
+        {% endfor %}
     </div>
-{% endif %}
+
+
+
+    {% if ((is_granted("IS_AUTHENTICATED_REMEMBERED")) or (is_granted("IS_AUTHENTICATED_FULLY"))) %}
+
+
+        <div class="popUp">
+            <div class="modalPopUp">
+                <a class="close" href="#">&times;</a>
+                <form id="upload" class="videoUploadForm" method="post" >
+                    <div class="loader"><img id="load" src="{{ asset("assets/images/websiteImages/default.gif") }}" alt="loader" ></div>
+                    <h1>Upload a video : </h1><br>
+                    <input type="text" name="video[name]" placeholder="Titre" required><br><br>
+                    <input type="text" name="video[link]" placeholder="Url" required><br><br>
+                    <input type="text" name="video[description]" placeholder="Description" required><br><br>
+                    <button type="submit">Add video</button>
+                    <input type="hidden" id="video__token" name="video[_token]" value="{{ csrf_token('video') }}" >
+                </form>
+            </div>
+        </div>
+    {% endif %}
+
+    {% include 'UserBundle:Base:footer.html.twig' %}
+</main>
+</body>
+</html>
