--- a/HamsterHubProject/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,58 +1,47 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<!DOCTYPE html>
-<html lang="en">
 
-{% include 'UserBundle:Base:head.html.twig' %}
 
-<body>
-
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register registerForm'}}) }}
 
 <div class="form-group">
     {{ form_label(form.username) }}
     {{ form_errors(form.username) }}
-    {{ form_widget(form.username) }} <br>
+    {{ form_widget(form.username) }}
 </div>
 
 <div class="form-group">
     {{ form_label(form.email) }}
     {{ form_errors(form.email) }}
-    {{ form_widget(form.email) }} <br>
+    {{ form_widget(form.email) }}
 </div>
 
 <div class="form-group">
-    {{ form_label(form.plainPassword) }}
     {{ form_errors(form.plainPassword) }}
-    {{ form_widget(form.plainPassword) }} <br>
+    {{ form_widget(form.plainPassword) }}
 </div>
 
 <div class="form-group">
     {{ form_label(form.lastname) }}
     {{ form_errors(form.lastname) }}
-    {{ form_widget(form.lastname) }} <br>
+    {{ form_widget(form.lastname) }}
 </div>
 
 <div class="form-group">
     {{ form_label(form.firstname) }}
     {{ form_errors(form.firstname) }}
-    {{ form_widget(form.firstname) }} <br>
+    {{ form_widget(form.firstname) }}
 </div>
 
 <div class="form-group">
     {{ form_label(form.birthdate) }}
     {{ form_errors(form.birthdate) }}
-    {{ form_widget(form.birthdate) }} <br>
+    {{ form_widget(form.birthdate) }}
 </div>
 
 <div>
-    <input type="submit" value="{{ 'registration.submit'|trans }}" />
+    <input type="submit" class="inputRegister" value="{{ 'registration.submit'|trans }}" />
 </div>
 {{ form_end(form) }}
-
-{% include 'UserBundle:Base:footer.html.twig' %}
-
-</body>
-</html>
 
 
