--- a/HamsterHubProject/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/HamsterHubProject/src/UserBundle/Resources/views/Security/login.html.twig
@@ -1,32 +1,22 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-{% include 'UserBundle:Base:head.html.twig' %}
-
-<body>
 {% block fos_user_content %}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path("fos_user_security_check") }}" method="post">
+    <form action="{{ path("fos_user_security_check") }}" method="post" class="loginForm">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-        <label for="username">{{ 'security.login.username'|trans }}</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+        <label for="username" class="loginFirstLabel">{{ 'security.login.username'|trans }}</label><br><Br>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" /><br><br>
 
-        <label for="password">{{ 'security.login.password'|trans }}</label>
-        <input type="password" id="password" name="_password" required="required" />
+        <label for="password">{{ 'security.login.password'|trans }}</label><br><br>
+        <input type="password" id="password" name="_password" required="required" /><br><br>
 
         <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label><br><br>
 
-        <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        <input type="submit" id="_submit" class="inputLogin" name="_submit" value="{{ 'security.login.submit'|trans }}" />
     </form>
 {% endblock fos_user_content %}
-
-{% include 'UserBundle:Base:footer.html.twig' %}
-</body>
-</html>
