--- a/HamsterHubProject/web/assets/css/modal.scss
+++ b/HamsterHubProject/web/assets/css/modal.scss
@@ -184,8 +184,6 @@ z-index: 10;
   border: none;
   padding: 5px 10px 5px 10px;
   text-decoration: none;
-
-  margin-top: 30px;
 }
 
 .uploadBtn {
@@ -194,9 +192,7 @@ z-index: 10;
   height: 29px;
   padding: 5px 10px 5px 10px;
   text-decoration: none;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%);
+  margin-left: 44%;
   display: block;
   margin-bottom: 4%;
 }
