--- a/HamsterHubProject/web/assets/css/style.css
+++ b/HamsterHubProject/web/assets/css/style.css
@@ -196,6 +196,17 @@ html, body {
 .postVideo img {
   width: 100%; }
 
+@media screen and (min-width: 641px) {
+  .postVideo {
+    text-align: center; }
+    .postVideo img {
+      max-width: 640px;
+      display: block;
+      margin: 0 auto; }
+
+  .editBtn {
+    margin-right: 40px;
+    float: right; } }
 html {
   font-family: "Roboto", sans-serif; }
 
@@ -507,8 +518,7 @@ html {
   border-radius: 6px;
   border: none;
   padding: 5px 10px 5px 10px;
-  text-decoration: none;
-  margin-top: 30px; }
+  text-decoration: none; }
 
 .uploadBtn {
   border-radius: 6px;
@@ -516,9 +526,7 @@ html {
   height: 29px;
   padding: 5px 10px 5px 10px;
   text-decoration: none;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%);
+  margin-left: 44%;
   display: block;
   margin-bottom: 4%; }
 
